Update Presentation API (#20)
* Create docker-compose
* Update the repository
* Update Presentation API
* Add tests for Presentation API
